--- a/angular/app/angular.json
+++ b/angular/app/angular.json
@@ -24,10 +24,18 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/nova-light/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
+          },
+          "dependencies": {
+            "primeng": "^8.0.0",
+            "primeicons": "^2.0.0"
           },
           "configurations": {
             "production": {
