--- a/angular/app/package.json
+++ b/angular/app/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^9.0.2",
     "@angular/router": "^9.0.2",
     "@fortawesome/fontawesome-free": "^5.12.1",
+    "@fullcalendar/core": "^4.4.0",
     "all": "0.0.0",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
