--- a/angular/app/package.json
+++ b/angular/app/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@fullcalendar/core": "^4.4.0",
     "all": "0.0.0",
+    "base64url": "^3.0.1",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "jquery": "^1.9.1",
