group update feature finished. calendar view started

--- a/angular/app/package.json
+++ b/angular/app/package.json
@@ -22,6 +22,10 @@
     "@angular/router": "^9.0.2",
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@fullcalendar/core": "^4.4.0",
+    "@fullcalendar/daygrid": "^4.4.0",
+    "@fullcalendar/interaction": "^4.4.0",
+    "@fullcalendar/list": "^4.4.0",
+    "@fullcalendar/timegrid": "^4.4.0",
     "all": "0.0.0",
     "base64url": "^3.0.1",
     "bootstrap": "^4.4.1",
@@ -45,7 +49,7 @@
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
