--- a/angular/app/package.json
+++ b/angular/app/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "^9.0.2",
     "@angular/core": "^9.0.2",
     "@angular/forms": "^9.0.2",
+    "@angular/localize": "^9.0.7",
     "@angular/platform-browser": "^9.0.2",
     "@angular/platform-browser-dynamic": "^9.0.2",
     "@angular/router": "^9.0.2",
@@ -27,6 +28,7 @@
     "@fullcalendar/interaction": "^4.4.0",
     "@fullcalendar/list": "^4.4.0",
     "@fullcalendar/timegrid": "^4.4.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "all": "0.0.0",
     "base64url": "^3.0.1",
     "bootstrap": "^4.4.1",
