--- a/angular/app/package.json
+++ b/angular/app/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^9.0.2",
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@fullcalendar/angular": "^4.4.5-beta",
+    "@fullcalendar/bootstrap": "^4.4.0",
     "@fullcalendar/core": "^4.4.0",
     "@fullcalendar/daygrid": "^4.4.0",
     "@fullcalendar/interaction": "^4.4.0",
