--- a/spring/service-calendar/src/main/resources/application.yml
+++ b/spring/service-calendar/src/main/resources/application.yml
@@ -1,15 +1,13 @@
 spring:
-  data:
-    mongodb:
-      host: 192.168.99.100
-      port: 27017
-      username: root
-      password: root
-      database: admin
-      auto-index-creation: false
+  jackson:
+    serialization:
+      write_dates_as_timestamps: false
   application:
     name: calendar-service
-
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
 
 
 server:
