--- a/spring/auth-service/pom.xml
+++ b/spring/auth-service/pom.xml
@@ -32,10 +32,9 @@
 
 
 	<parent>
-		 <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.2.5.RELEASE</version>
-    
+		<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.2.5.RELEASE</version>
 	</parent>
 
 	<dependencies>
@@ -82,11 +81,15 @@
 			<version>1.18.12</version>
 			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+			<version>2.2.5.RELEASE</version>
 		</dependency>
 	</dependencies>
 	
