--- a/spring/auth-service/src/main/resources/application.yml
+++ b/spring/auth-service/src/main/resources/application.yml
@@ -5,6 +5,16 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  rabbitmq:
+    host: 192.168.99.100
+    listener:
+      simple:
+        retry:
+          enabled: false
+    template:
+      reply-timeout: 15000
+      retry:
+        enabled: false
 
 
 server:
