--- a/spring/service-user/src/main/resources/application.yml
+++ b/spring/service-user/src/main/resources/application.yml
@@ -5,7 +5,16 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-
+  rabbitmq:
+    template:
+      reply-timeout: 15000
+      retry:
+        enabled: false
+    host: 192.168.99.100
+    listener:
+      simple:
+        retry:
+          enabled: false
 server:
   port: 9101
 
