--- a/spring/auth-service/src/main/resources/application.yml
+++ b/spring/auth-service/src/main/resources/application.yml
@@ -6,7 +6,6 @@ spring:
       ddl-auto: update
     show-sql: true
   rabbitmq:
-    host: 192.168.99.100
     listener:
       simple:
         retry:
@@ -25,11 +24,10 @@ eureka:
   client:
     registerWithEureka: true
     fetchRegistry: true
-
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka:8761/eureka/
   instance:
-    hostname: localhost
+    hostname: auth-service
 
 logging:
   level:
