--- a/spring/server/src/main/resources/application.yml
+++ b/spring/server/src/main/resources/application.yml
@@ -10,9 +10,9 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka:8761/eureka/
   instance:
-    hostname: localhost
+    hostname: eureka
 
 logging:
   level:
