--- a/spring/service-notification/src/main/resources/application.yml
+++ b/spring/service-notification/src/main/resources/application.yml
@@ -6,7 +6,6 @@ spring:
       reply-timeout: 15000
       retry:
         enabled: false
-    host: 192.168.99.100
 
 server:
   port: 9104
@@ -16,9 +15,9 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka:8761/eureka/
   instance:
-    hostname: localhost
+    hostname: notification-service
 
 logging:
   level:
