--- a/spring/service-user/src/main/resources/application.yml
+++ b/spring/service-user/src/main/resources/application.yml
@@ -10,7 +10,6 @@ spring:
       reply-timeout: 15000
       retry:
         enabled: false
-    host: 192.168.99.100
 
 server:
   port: 9101
@@ -20,9 +19,9 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka:8761/eureka/
   instance:
-    hostname: localhost
+    hostname: login-service
 
 logging:
   level:
