--- a/spring/services-group/pom.xml
+++ b/spring/services-group/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>app</groupId>
     <artifactId>services-group</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <name>group-service</name>
 
