--- a/spring/services-group/src/main/resources/application.yml
+++ b/spring/services-group/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 spring:
   rabbitmq:
-    host: 192.168.99.100
     listener:
       simple:
         retry:
@@ -11,7 +10,7 @@ spring:
         enabled: false
   data:
     neo4j:
-      uri: bolt://192.168.99.100
+      uri: bolt://groupdb:7687
       username: neo4j
       password: neo4j
   application:
@@ -25,9 +24,9 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka:8761/eureka/
   instance:
-    hostname: localhost
+    hostname: group-service
 
 logging:
   level:
