creating docker containers

--- a/spring/services-group/src/main/resources/application.yml
+++ b/spring/services-group/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     neo4j:
       uri: bolt://groupdb:7687
       username: neo4j
-      password: neo4j
+      password: asdasd
   application:
     name: group-service
 
