--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,6 +123,8 @@ services:
     ports:
       - '7474:7474'
       - '7687:7687'
+    environment:
+      - "NEO4J_AUTH=neo4j/asdasd"
     expose:
       - '7474'
       - '7687'
@@ -160,10 +162,6 @@ services:
     networks:
       - app
 
-
-
-
-    
 
 networks:
   app:
