--- a/spring/service-user/src/main/resources/application.yml
+++ b/spring/service-user/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: login-service
+    name: user-service
   jpa:
     hibernate:
       ddl-auto: update
@@ -21,7 +21,7 @@ eureka:
     serviceUrl:
       defaultZone: http://eureka:8761/eureka/
   instance:
-    hostname: login-service
+    hostname: user-service
 
 logging:
   level:
